# medicine_tracker

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/batches/[id]/: route.ts
demo_api/: Cargo.toml
demo_api/src/: main.rs
docs/: mongodb.md
iot_agent/: Cargo.toml
iot_agent/src/: main.rs
programs/medicine_tracker/: Cargo.toml
programs/medicine_tracker/src/: lib.rs
tests/: medicine_tracker.ts
